# fin

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: flakehub-publish-tagged.yml  nix.yml  release-bsd-aarch64.yml  release.yml
.tangled/workflows/: build.yml
crates/fin/: Cargo.toml
crates/fin-config/: Cargo.toml
crates/fin-config/src/: lib.rs
crates/fin-jellyfin/: Cargo.toml
crates/fin-jellyfin/src/: client.rs  lib.rs  models.rs
crates/fin-media/: Cargo.toml
crates/fin-media/src/: lib.rs
crates/fin-mediarenderer/: Cargo.toml
crates/fin-mediarenderer/examples/: standalone.rs
crates/fin-mediarenderer/src/: desc.rs  gena.rs  http.rs  lib.rs  soap.rs  ssdp.rs  xml.rs
crates/fin-mpris/: Cargo.toml
crates/fin-mpris/src/: lib.rs
crates/fin-player/: Cargo.toml
crates/fin-player/src/: cast.rs  crossfade.rs  discovery.rs  lib.rs  local.rs  mpv.rs  persist.rs  queue.rs  renderer.rs  replaygain.rs  rockbox_player.rs  symphonia_player.rs  upnp.rs  voice_dsp.rs
crates/fin-subsonic/: Cargo.toml
crates/fin-subsonic/src/: lib.rs
crates/fin-tui/: Cargo.toml
crates/fin-tui/src/: app.rs  event.rs  lib.rs  theme.rs
crates/fin-tui/src/screens/: mod.rs
crates/fin-tui/src/widgets/: eq.rs  help.rs  mod.rs  player_bar.rs  tabs.rs
crates/fin/src/: cli.rs  main.rs  preflight.rs
npm/: .gitignore  .npmignore  README.md  package.json
npm/lib/: download.js  platform.js
npm/scripts/: postinstall.js
