[package]
name = "fin-player"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
parking_lot.workspace = true
futures.workspace = true
mdns-sd.workspace = true
rust_cast.workspace = true
reqwest.workspace = true
url.workspace = true
fin-jellyfin.workspace = true
