[package]
name = "fin-player"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
parking_lot.workspace = true
futures.workspace = true
mdns-sd.workspace = true
rust_cast.workspace = true
reqwest = { workspace = true, features = ["stream", "blocking"] }
url.workspace = true
fin-jellyfin.workspace = true
fin-config.workspace = true

# Local audio-only playback: fetch → symphonia decode → cpal output.
# mpv is only used for video; audio never touches mpv.
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
cpal = "0.15"
rb = "0.4"

# Shuffle uses Fisher-Yates via `rand` — pulled in as a transitive dep
# already, so this is a zero-cost explicit dep.
rand = "0.9"

# Rockbox DSP pipeline — 10-band EQ, tone controls, resample, crossfeed, …
# Note: the compiled C sources are GPL-2.0-or-later — linking makes the
# binary GPL when EQ code is included.
rockbox-dsp = "0.1"
