[package]
name = "fin-player"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
parking_lot.workspace = true
futures.workspace = true
mdns-sd.workspace = true
rust_cast.workspace = true
reqwest = { workspace = true, features = ["stream", "blocking"] }
url.workspace = true
fin-jellyfin.workspace = true
fin-config.workspace = true

# Shuffle uses Fisher-Yates via `rand` — pulled in as a transitive dep
# already, so this is a zero-cost explicit dep.
rand = "0.9"

# Local audio-only playback engine. Owns the queue, transport, shuffle/
# repeat, exact-position resume, ReplayGain, crossfade and the full Rockbox
# DSP chain (10-band EQ, tone controls, …) plus HTTP(S) streaming — the
# `http` feature is on by default. Decoding is done by Rockbox's own codecs
# and output goes straight to cpal; mpv is only used for video.
#
# Note: rockbox-playback is GPL-2.0-or-later (it links the Rockbox C codec
# and DSP sources), so linking it makes the fin binary GPL.
rockbox-playback = "0.4"
