[package]
name = "fin-subsonic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
url.workspace = true
uuid.workspace = true
percent-encoding.workspace = true

# Subsonic auth: salt + MD5(password + salt) is the standard scheme.
md5 = "0.7"
rand = "0.9"

fin-jellyfin.workspace = true
