[package]
name = "fin-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tracing.workspace = true
unicode-width.workspace = true
parking_lot.workspace = true
chrono.workspace = true
uuid.workspace = true
fin-config.workspace = true
fin-jellyfin.workspace = true
fin-media.workspace = true
fin-player.workspace = true

# Shift+X shuffle-play uses Fisher-Yates, same version as fin-player.
rand = "0.9"
