[package]
name = "fin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A neon-electric TUI Jellyfin client for mpv & Chromecast."

[[bin]]
name = "fin"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
toml.workspace = true
rpassword.workspace = true
rustls.workspace = true
fin-config.workspace = true
fin-jellyfin.workspace = true
fin-player.workspace = true
fin-tui.workspace = true
